# synthdb

./: .gitignore  CLAUDE.md  Makefile  README.md  db.db  detailed_results.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  synth.py  test.limbo-wal  test_utils.py  uv.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  performance_benchmark.py  quick_benchmark.py
docs/: README.md  cli-examples.md  cli-reference.md  index.md
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  searchindex.js
docs/_build/html/.doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/html/.doctrees/api/: connection.doctree  modules.doctree  synthdb.doctree
docs/_build/html/.doctrees/development/: feature-proposals.doctree
docs/_build/html/.doctrees/development/feature-proposals/: database-branching.doctree  joined-table-queries.doctree  safe-user-queries.doctree
docs/_build/html/.doctrees/getting-started/: installation.doctree  quickstart.doctree
docs/_build/html/_modules/synthdb/: api.html  bulk.html  connection.html  database.html  transactions.html  views.html
docs/_build/html/_sources/development/feature-proposals/: joined-table-queries.md.txt  safe-user-queries.md.txt
docs/_build/html/_sources/getting-started/: installation.md.txt
docs/_build/html/api/: connection.html  synthdb.html
docs/_build/html/development/: feature-proposals.html
docs/_build/html/development/feature-proposals/: joined-table-queries.html  safe-user-queries.html
docs/_build/html/getting-started/: quickstart.html
docs/api/: connection.md  synthdb.rst
docs/development/: feature-proposals.md
docs/development/feature-proposals/: api-server.md  column-type-changes.md  database-branching.md  frontend.md  id-naming-convention.md  joined-table-queries.md  models-inheritance-refactor.md  monorepo-saas-architecture.md  safe-user-queries.md  saved-queries.md  type-safe-models.md  typescript-sdk.md
docs/development/research-papers/: README.md  performance-scaling-analysis.md  performance-testing-proposal.md
docs/getting-started/: cli-quickstart.md  installation.md  quickstart.md  sql-queries.md
docs/stylesheets/: extra.css
examples/: api_and_models_demo.py  branch_demo.py  demo.py  libsql_demo.py  local_project_demo.py  merge_demo.py  populate_test_branch.py  saved_queries_demo.py  sql_execution_demo.py  wal_mode_demo.py
scripts/: build_docs.py  dev.py
site/: 404.html  conf.py  index.html  objects.inv  sitemap.xml
site/_build/html/: objects.inv  py-modindex.html  search.html
site/_build/html/_modules/: index.html
site/_build/html/_modules/synthdb/: backends.html  cli.html  completion.html  config.html  config_file.html  core.html  errors.html  inference.html  schema.html  types.html  utils.html
site/_build/html/_sources/api/: connection.md.txt  modules.rst.txt
site/_build/html/_sources/development/: feature-proposals.md.txt
site/_build/html/_sources/development/feature-proposals/: database-branching.md.txt
site/_build/html/_sources/getting-started/: quickstart.md.txt
site/_build/html/api/: modules.html
site/_build/html/development/feature-proposals/: database-branching.html
site/_build/html/getting-started/: installation.html
site/api/connection/: index.html
site/development/feature-proposals/: index.html
site/development/feature-proposals/database-branching/: index.html
site/development/feature-proposals/joined-table-queries/: index.html
site/development/feature-proposals/safe-user-queries/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/search/: search_index.json
synthdb/: __init__.py  __main__.py  api.py  api_client.py  api_server.py  backends.py  bulk.py  cli.py  completion.py  config.py  config_file.py  connection.py  constants.py  core.py  database.py  errors.py  inference.py  local_config.py  models.py  py.typed  saved_queries.py  schema.py  sql_validator.py  timestamps.py  transactions.py  types.py  utils.py  views.py
tests/: conftest.py  test_api_client.py  test_autosequencing.py  test_cli.py  test_cli_help.py  test_column_management.py  test_connection.py  test_core.py  test_database.py  test_helpers.py  test_libsql_backend.py  test_models.py  test_new_api.py  test_protected_names.py  test_saved_queries.py  test_sql_execution.py  test_table_copy.py  test_table_management.py  test_utils.py  test_uuids.py  test_views.py  test_wal_mode.py
