[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthdb"
version = "0.1.0"
description = "A flexible database system with schema-on-write capabilities"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "libsql-experimental>=0.0.10",
    "python-dateutil>=2.8.0",
    "types-python-dateutil>=2.9.0.20250516",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
config = [
    "PyYAML>=6.0",
    "toml>=0.10.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2023.9.10",
    "myst-parser[linkify]>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
    "mike>=1.1.0",
    "linkify-it-py>=2.0.0",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/russellromney/synthdb"
Repository = "https://github.com/russellromney/synthdb"
Issues = "https://github.com/russellromney/synthdb/issues"

[project.scripts]
synthdb = "synthdb.cli:app"
sdb = "synthdb.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthdb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["synthdb"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Exclude CLI from type checking (framework-heavy, less critical for type safety)
[[tool.mypy.overrides]]
module = "synthdb.cli"
ignore_errors = true

# Exclude config files from type checking (configuration-heavy, less critical for type safety)
[[tool.mypy.overrides]]
module = "synthdb.config_file"
ignore_errors = true

# Ignore external libraries without type stubs
[[tool.mypy.overrides]]
module = "libsql_experimental"
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-toml>=0.10.8.20240310",
    "no-implicit-optional>=1.4",
]
